# unitree-go2-ruicom

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
dataset/safety_signs_dataset/runs/detect/train3/: args.yaml  results.csv
docs/: LineProcessor.md  safety_detection.md
include/: LineProcessor.hpp  ONNXDetector.hpp  YOLODetector.hpp
src/: LineProcessor.cpp  ONNXDetector.cpp  YOLODetector.cpp  go2_light_controller.cpp  go2_line_following.cpp  go2_obstacles_avoid.cpp  go2_safety_detection.cpp  go2_sport_interactive.cpp  go2_video_client.cpp  go2_vision_detection.cpp
